# dynamite-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
dynamite_cli/: dynamo_copy.py  main.py
tests/: test_dynamite_cli.py
