[tool.poetry]
name = "dynamite-cli"
version = "0.1.0"
description = ""
authors = ["softwarebloat <softwarebloat@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
dynamite-cli = "dynamite_cli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
boto3 = "^1.17.3"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
